--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -33,6 +33,7 @@ jobs:
       - name: Build
         env:
           NODE_ENV: production
+          VITE_BASE_PATH: "/nonnas-artisan-bakery-demo-1-1/"
         run: |
           REPO_NAME=$(echo "${{ github.repository }}" | cut -d'/' -f2)
           export VITE_BASE_PATH="/$REPO_NAME/"
